--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@warlock.js/cache",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "description": "A Robust Cache Manager for Nodejs",
     "main": "src/index.ts",
     "dependencies": {
         "@mongez/fs": "^3.0.4",
         "redis": "^4.6.10",
-        "@warlock.js/logger": "^1.0.0",
+        "@warlock.js/logger": "2.0.0",
         "@mongez/reinforcements": "^2.3.9",
         "@mongez/supportive-is": "^2.0.3"
     },
