--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@warlock.js/cache",
-    "version": "3.0.35",
+    "version": "3.0.40",
     "description": "A Robust Cache Manager for Nodejs",
-    "main": "src/index.ts",
+    "main": "./cjs/index.js",
     "dependencies": {
         "@mongez/fs": "^3.0.4",
         "redis": "^4.6.10",
-        "@warlock.js/logger": "3.0.35",
+        "@warlock.js/logger": "3.0.40",
         "@mongez/reinforcements": "^2.3.9",
         "@mongez/supportive-is": "^2.0.3"
     },
@@ -33,5 +33,7 @@
         "cache-manager-nodejs-memcached"
     ],
     "author": "hassanzohdy",
-    "license": "MIT"
+    "license": "MIT",
+    "module": "./esm/index.js",
+    "typings": "./cjs/index.d.ts"
 }
